# val_description

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
common/xacro/actuator_names/: valkyrie_actuator_names.xacro
common/xacro/api/: forearm_api.xacro  testbench_api.xacro  valkyrie_A_api.xacro  valkyrie_B_api.xacro  valkyrie_C_api.xacro  valkyrie_D_api.xacro  valkyrie_sim_api.xacro
common/xacro/dev_ports/: valkyrie_A_ports.xacro  valkyrie_B_ports.xacro  valkyrie_C_ports.xacro  valkyrie_D_ports.xacro  valkyrie_gazebo_ports.xacro  valkyrie_imu_test_ports.xacro
env-hooks/: 10.val_description.bash.develspace.in  10.val_description.bash.installspace.in
launch/: bandit.launch  single_arm_testbed.launch  single_arm_testbed.rviz  val_rviz_arm.launch
model/robots/: bandit.xacro  forearm_left.xacro  forearm_right.xacro  forearm_sim.xacro  forearm_sim_right.xacro  single_arm_testbed.xacro  support.xacro  test_bench.xacro  valkyrie_A.xacro  valkyrie_A_arm_mass_sims.xacro  valkyrie_A_transmissions.xacro  valkyrie_B.xacro  valkyrie_B_arm_mass_sims.xacro  valkyrie_B_transmissions.xacro  valkyrie_C.xacro  valkyrie_C_arm_mass_sims.xacro  valkyrie_D.xacro  valkyrie_D_arm_mass_sims.xacro  valkyrie_E_arm.xacro  valkyrie_arm_sim.xacro  valkyrie_sim.xacro  valkyrie_sim_angled_legj1s.xacro  valkyrie_sim_arm_mass_sims.xacro  valkyrie_sim_arm_mass_sims_hd.xacro  valkyrie_sim_gazebo_sync.xacro  valkyrie_sim_pinned.xacro  valkyrie_sim_reduced.xacro
model/urdf/: multisense_sl.urdf  multisense_sl_remote.urdf
src/val_description/: CoeffSchemaDefinitions.py
(+273 files in other folders)
