<?xml version="1.0"?>
<package format="2">
  <name>val_description</name>
  <version>6.0.0</version>
  <description>The val_description package</description>

  <maintainer email="james.j.holley@nasa.gov">James Holley</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

  <export>

  </export>
</package>
